Added AdSense Script to all pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicon-32x32.png">
+    <script data-ad-client="ca-pub-1757556292653985" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% include analytics_head.html %}
   </head>
 
